--- a/springboot-thymeleaf/src/main/resources/application.properties
+++ b/springboot-thymeleaf/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-è
+
 banner.charset=UTF-8
 server.tomcat.uri-encoding=UTF-8
 spring.http.encoding.charset=UTF-8
@@ -8,9 +8,9 @@ spring.messages.encoding=UTF-8
 
 server.port=8085
 
-spring.datasource.url=jdbc:mysql://localhost:3306/springBoot?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/springBoot?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
@@ -22,5 +22,6 @@ logging.level.org.springframework.web=WARN
 logging.file=./logs/mylog.log
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger- %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger- %msg%n
-
+## ¥Ú”°SQL”Ôæ‰
+logging.level.com.pancm.dao=debug
 
